Fix buildTime overflow issue
- As-is : 'Last Build : No.XXX (buildTime)'
- To-be : 'Last Build : buildTime'
- Remove buildno info from custom.js file
- Add text-overflow option into custom.css file

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -852,11 +852,16 @@ h2 {
   width: 100%;
   float: left;
   clear: both;
-  margin-top: 5px
+  margin-top: 5px;
 }
 .x_content h4 {
   font-size: 16px;
   font-weight: 500
+}
+.buildTimeInfo {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 legend {
   padding-bottom: 7px
